# nix-flake-versioning

./: README.md  flake.nix  pyproject.toml
nix/: shared.nix
pythonedaartifactinfrastructurenixflakeversioning/pythonedaartifactnixflakeversioningdbus/: nix_flake_versioning_dbus_signal_emitter.py  nix_flake_versioning_dbus_signal_listener.py
